--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "ᴀɴᴏɴ ダ ᴍᴜsɪᴄ",
+    "name": "֊𖥻 َِ𝗨َِ𝗥 , َِ𝗙َِ𝗮َِ𝗩 َِ𝗩َِ𝗢َِ𝗗َِ𝗘َِ𝗜َِ𝗞𝗔•",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://te.legra.ph/file/b8a0c1a00db3e57522b53.jpg",
+    "logo": "https://graph.org/file/e5274b67b2d75460299a5.jpg",
     "keywords": [
     "python3",
     "telegram",
